display pakke-ziwo

--- a/work/src/rein.ipynb
+++ b/work/src/rein.ipynb
@@ -46,34 +46,22 @@
   },
   {
    "source": [
-    "def main():\n",
-    "    grid = [\n",
-    "        [0, 0, 0, 1],\n",
-    "        [0, 9, 0, -1],\n",
-    "        [0, 0, 0, 0]\n",
-    "    ]\n",
-    "    status : Status = Status()\n",
-    "    agent :Agent = Agent(status)\n",
-    "    env : Environment = Environment(grid, 0.8)\n",
-    "\n",
-    "    agent.start_by_goal(env)\n",
-    "\n",
-    "main()\n",
-    "\n",
-    "\n",
+    "a = 0\n",
+    "print(a+2)\n",
+    "print(a)\n",
     "\n",
     "        \n",
     "    \n"
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 2,
+   "execution_count": 5,
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "agent select action : Action.LEFT\nFalse\n[0.09999999999999998, 0.09999999999999998, 0, 0.8]\nis goal ?\n0\nyour position :0,0 False\nagent select action : Action.RIGHT\nFalse\n[0.09999999999999998, 0.09999999999999998, 0.8, 0]\nyour position :0,1 False\nagent select action : Action.LEFT\nFalse\n[0.09999999999999998, 0.09999999999999998, 0, 0.8]\nyour position :0,0 False\nagent select action : Action.UP\nFalse\n[0.8, 0, 0.09999999999999998, 0.09999999999999998]\nyour position :0,-1 False\nagent select action : Action.RIGHT\nFalse\n[0.09999999999999998, 0.09999999999999998, 0.8, 0]\nis goal ?\n1\nreach goal\nyour position :1,-1 True\nComplete\n"
+      "2\n0\n"
      ]
     }
    ]
